# cpp-tiny-json

./: .clang-format  .gitignore  CLI.cc  CMakeLists.txt  README.md  build.sh  main.cc  test.cc  test.json  testDump.json  testDumpChange.json
.cache/clangd/index/: main.cc.857BECBEA21C41AF.idx  test.cc.A428B3C8F8C1571C.idx  tjfile.hpp.A10AA081CEBB339D.idx  tjprint.hpp.3865BC4E514FACE1.idx  tjson.hpp.1932D154F9C2AABB.idx  tjsonObj.hpp.477A6A0D1DCC7F32.idx  tjsonParser.hpp.26655CE612EAEE89.idx  tjsonToken.hpp.E91CF74A89FCC891.idx
header-only/include/: tjson.hpp
header-only/include/tjson/: __detail.hpp  tjfile.hpp  tjprint.hpp  tjsonObj.hpp  tjsonParser.hpp  tjsonToken.hpp
header-only/include/tjson/detail/: _ParserScan.hpp  _TJsonToken.hpp
